[gd_scene load_steps=16 format=2]

[ext_resource path="res://Veri/Yazi Tipi/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Veri/Resimler/BUTON.png" type="Texture" id=2]
[ext_resource path="res://Veri/Kodlar/CanvasLayer.gd" type="Script" id=3]
[ext_resource path="res://Veri/Resimler/Kum Saati.png" type="Texture" id=4]
[ext_resource path="res://Veri/Resimler/PARA.png" type="Texture" id=5]
[ext_resource path="res://Veri/Kodlar/Value.gd" type="Script" id=6]
[ext_resource path="res://Veri/Resimler/Ekmek.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 4000, 2000 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 4000, 2000 )
modulate_color = Color( 0, 0.643137, 1, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 4000, 2000 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 4000, 2000 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 72.0
color = Color( 0, 0.486275, 1, 1 )

[node name="MAIN MENU" type="Button" parent="ColorRect"]
margin_right = 128.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "MAIN MENU"

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
margin_left = 168.0
margin_right = 224.0
margin_bottom = 56.0
texture = ExtResource( 5 )
expand = true

[node name="PARA" type="Label" parent="ColorRect/TextureRect"]
margin_left = 56.0
margin_right = 152.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="GELIR" type="Label" parent="ColorRect/TextureRect"]
margin_left = 152.0
margin_right = 248.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 6 )
text = "+5"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="Label" type="Label" parent="ColorRect/TextureRect"]
margin_left = 152.0
margin_right = 248.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 7 )
text = "(                )"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="ColorRect"]
margin_left = 448.0
margin_right = 504.0
margin_bottom = 56.0
texture = ExtResource( 7 )
expand = true

[node name="YEMEK" type="Label" parent="ColorRect/TextureRect2"]
margin_left = 56.0
margin_right = 192.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 6 )
text = "50"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="ODULLU VIDYO" type="Button" parent="ColorRect"]
margin_left = 832.0
margin_right = 1025.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "REWARDED VIDEO"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 896.0
margin_top = 448.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0.486275, 1, 1 )

[node name="TURGEC" type="TextureButton" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -128.0
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1
script = ExtResource( 6 )

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
margin_left = 136.0
margin_top = 112.0
margin_right = 808.0
margin_bottom = 448.0
color = Color( 0, 0.486275, 1, 1 )

[node name="TUR GEEC" type="Button" parent="ColorRect3"]
margin_left = 120.0
margin_top = 152.0
margin_right = 568.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "TOUR PASS"

[node name="CIKIS" type="Button" parent="ColorRect3"]
margin_left = 616.0
margin_right = 672.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "X"

[connection signal="pressed" from="ColorRect/MAIN MENU" to="." method="_on_MAIN_MENU_pressed"]
[connection signal="pressed" from="ColorRect/ODULLU VIDYO" to="." method="_on_ODULLU_VIDYO_pressed"]
[connection signal="pressed" from="ColorRect2/TURGEC" to="." method="_on_TURGEC_pressed"]
[connection signal="pressed" from="ColorRect3/TUR GEEC" to="." method="_on_TUR_GEEC_pressed"]
[connection signal="pressed" from="ColorRect3/CIKIS" to="." method="_on_CIKIS_pressed"]
